--- a/BoxAndroidLibrarySample/res/layout/folder_details.xml
+++ b/BoxAndroidLibrarySample/res/layout/folder_details.xml
@@ -14,17 +14,21 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and 
 limitations under the License.
 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-
-    <TextView
-        android:id="@+id/detailsText"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Loading..."
-    />
-
-</LinearLayout>
+    <LinearLayout
+	    android:orientation="vertical"
+	    android:layout_width="fill_parent"
+	    android:layout_height="fill_parent"
+	    >
+	    <TextView
+	        android:id="@+id/detailsText"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:text="Loading..."
+	    />
+    </LinearLayout>
+</ScrollView>
