* Added support for sub-comments (comments made about comments) * Remove hard-coded strings from layouts and converted them to string resources. * Added display of comments in file-details page in sample app.

--- a/BoxAndroidLibrarySample/res/layout/home.xml
+++ b/BoxAndroidLibrarySample/res/layout/home.xml
@@ -24,21 +24,21 @@ limitations under the License.
         android:id="@+id/userInfoButton"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="View User Info"
+        android:text="@string/view_user_info"
     />
 
     <Button
         android:id="@+id/treeButton"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Browse"
+        android:text="@string/browse"
     />
 
     <Button
         android:id="@+id/logoutButton"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Log out"
+        android:text="@string/log_out"
     />
 
 </LinearLayout>
