--- a/BoxAndroidLibrarySample/res/layout/file_details.xml
+++ b/BoxAndroidLibrarySample/res/layout/file_details.xml
@@ -14,17 +14,32 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and 
 limitations under the License.
 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
 
+    <LinearLayout
+	    android:orientation="vertical"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+        >
+        
     <TextView
         android:id="@+id/detailsText"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Loading..."
+        android:text="@string/loading_file_details"
+    />
+    
+    <TextView
+        android:id="@+id/commentsText"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/loading_comments"
     />
 
-</LinearLayout>
+    </LinearLayout>
+    
+</ScrollView>
