--- a/BoxAndroidLibrarySample/res/layout/folder_details.xml
+++ b/BoxAndroidLibrarySample/res/layout/folder_details.xml
@@ -22,13 +22,13 @@ limitations under the License.
     <LinearLayout
 	    android:orientation="vertical"
 	    android:layout_width="fill_parent"
-	    android:layout_height="fill_parent"
+	    android:layout_height="wrap_content"
 	    >
 	    <TextView
 	        android:id="@+id/detailsText"
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
-	        android:text="Loading..."
+	        android:text="@string/loading"
 	    />
     </LinearLayout>
 </ScrollView>
