--- a/BoxAndroidLibrarySample/res/layout/share.xml
+++ b/BoxAndroidLibrarySample/res/layout/share.xml
@@ -36,7 +36,7 @@ limitations under the License.
 	        android:textSize="20dp"
 	        android:textStyle="bold"
 	        android:textColor="#000000"
-	        android:text="Share"  
+	        android:text="@string/share"  
 	        />
 	    
         <TextView
@@ -55,7 +55,7 @@ limitations under the License.
 	        android:textSize="16dp"
 	        android:textColor="#666666"
 	        android:paddingTop="10dp"
-	        android:text="E-mail addresses (comma separated):"  
+	        android:text="@string/email_addresses_comma_separated"  
 	        />   
 	        
         <EditText
@@ -63,6 +63,7 @@ limitations under the License.
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="16dp"
+            android:inputType="text"
             android:text=""
             />
 	        
@@ -72,7 +73,7 @@ limitations under the License.
             android:textSize="16dp"
             android:textColor="#666666"
             android:paddingTop="10dp"
-            android:text="Message:"  
+            android:text="@string/message"  
             />   
             
         <EditText
@@ -80,7 +81,8 @@ limitations under the License.
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="16dp"
-            android:text="Shared from sample Box Android library app"
+            android:inputType="text"
+            android:text="@string/shared_from_sample_box_android_library_app"
             />	        
 	        
        <LinearLayout
@@ -94,13 +96,13 @@ limitations under the License.
 		        android:id="@+id/shareButton"
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
-		        android:text="Share"  
+		        android:text="@string/share"  
 		        /> 	        
 		    <Button
 		        android:id="@+id/cancelButton"
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
-		        android:text="Cancel"  
+		        android:text="@string/cancel"  
 		        /> 	    
 	     </LinearLayout>    
    </LinearLayout>
